# extargsparse-rs

./: .gitignore  Cargo.toml
codegen/: Cargo.toml
codegen/src/: logger.rs
examples/compound/: Cargo.toml
examples/compound/src/: main.rs
examples/funcuse/multifunc/: Cargo.toml
examples/funcuse/multifunc/src/: main.rs
examples/getopt/attrset/: Cargo.toml
examples/getopt/attrset/src/: main.rs
examples/getopt/cmdfunc/: Cargo.toml
examples/getopt/cmdfunc/src/: main.rs
examples/getopt/cmdkey/: Cargo.toml
examples/getopt/cmdkey/src/: main.rs
examples/getopt/cmdopt/: Cargo.toml
examples/getopt/cmdopt/src/: main.rs
examples/getopt/cmdset/: Cargo.toml
examples/getopt/cmdset/src/: main.rs
examples/getopt/flagname/: Cargo.toml
examples/getopt/flagname/src/: main.rs
examples/getopt/helpset/: Cargo.toml
examples/getopt/helpset/src/: main.rs
examples/getopt/longprefix/: Cargo.toml
examples/getopt/longprefix/src/: main.rs
examples/getopt/nargs/: Cargo.toml
examples/getopt/nargs/src/: main.rs
examples/getopt/subcmd/: Cargo.toml
examples/getopt/subcmd/src/: main.rs
examples/getopt/varname/: Cargo.toml
examples/getopt/varname/src/: main.rs
examples/helpfunc/filehelp/: Cargo.toml
examples/helpfunc/filehelp/src/: main.rs
examples/helpfunc/helpfunc/: Cargo.toml
examples/helpfunc/helpfunc/src/: main.rs
examples/helpfunc/helpstr/: Cargo.toml
examples/helpfunc/helpstr/src/: main.rs
examples/multisub/: Cargo.toml
examples/newargsparse/newargsparse/: Cargo.toml
examples/newargsparse/newargsparse/src/: main.rs
examples/newargsparse/noopt/: Cargo.toml
examples/newargsparse/noopt/src/: main.rs
examples/newargsparse/priority/: Cargo.toml
examples/newargsparse/priority/src/: main.rs
examples/opthdl/opthdl/: Cargo.toml
examples/opthdl/opthdl/src/: main.rs
examples/options/options/: Cargo.toml
examples/options/options/src/: main.rs
examples/options/setval/: Cargo.toml
examples/options/setval/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/subcmd/: Cargo.toml
examples/subcmd/src/: main.rs
extargsparse-codegen/: Cargo.toml
extargsparse-rs/: Cargo.toml
extargsparse-rs/src/: argset.rs  const_value.rs  errors.rs  funccall.rs  helpsize.rs  key.rs  lib.rs  logger.rs  namespace.rs  optchk.rs  options.rs  parser.rs  parser_compat.rs  parser_state.rs  tests.rs  util.rs
extargsparse_codegen/: Cargo.toml  README.md
extargsparse_codegen/src/: errors.rs  lib.rs  logger.rs
extargsparse_worker/: Cargo.toml  README.md
extargsparse_worker/src/: argset.rs  const_value.rs  errors.rs  funccall.rs  key.rs  lib.rs  logger.rs  namespace.rs  options.rs  parser.rs  parser_compat.rs  parser_state.rs  tests.rs  util_test.rs
macro_expand/: Cargo.toml
macro_expand/src/: lib.rs
src/: errors.rs  key.rs  lib.rs
worker/: Cargo.toml
worker/src/: errors.rs  helpsize.rs  lib.rs  options.rs  parser_compat.rs  util.rs
