[package]
name = "extargsparse-rs"
version = "0.1.0"
authors = ["bt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.42"
regex = "1"
log4rs = "^0.8.3"
log = "^0.4.8"
lazy_static = "^1.4.0"
macro_expand = { path = "../macro_expand"}