[package]
name = "extargsparse_codegen"
version = "0.1.4"
edition = "2021"
rust-version = "1.59.0"
author = ["jeppeter <jeppeter@gmail.com>"]
description = """
Rust Commandline User Interface
"""
license = "MIT/Apache-2.0"

repository = "https://github.com/jeppeter/extargsparse-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1", features = ["full", "parsing"] }
lazy_static = "^1.4.0"
proc-macro2 = { version = "1.0.32", default-features = false }
rand = "^0.8.5"
bytes = "^0.5.3"
chrono = "^0.4.0"
regex = "^1"