[package]
name = "extargsparse_worker"
version = "0.1.0"
edition = "2021"
description = """
Rust Commandline User Interface
"""
license = "MIT/Apache-2.0"

repository = "https://github.com/jeppeter/extargsparse-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.42"
regex = "1"
log4rs = "^0.8.3"
log = "^0.4.8"
lazy_static = "^1.4.0"
extargsparse_codegen = { path = "../extargsparse_codegen"}
# extargsparse_codegen = "^0.1.0"

[dev-dependencies]
tempfile = "^3.3.0"