[package]
name = "extargsparse_worker"
version = "0.1.8"
edition = "2021"
rust-version = "1.59.0"
author = ["jeppeter <jeppeter@gmail.com>"]
description = """
Rust Commandline User Interface
"""
license = "MIT/Apache-2.0"

repository = "https://github.com/jeppeter/extargsparse-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.42"
regex = "1"
chrono = "^0.4.0"
lazy_static = "^1.4.0"
#extargsparse_codegen = { path = "../extargsparse_codegen"}
extargsparse_codegen = "^0.1.2"

[dev-dependencies]
tempfile = "^3.3.0"