[package]
name = "subcmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extargsparse_codegen = {path = "../../../extargsparse_codegen"}
extargsparse_worker = {path = "../../../extargsparse_worker"}
lazy_static = "^1.4.0"
regex = "1"